--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <script type="text/javascript" src="assets/libs/mdl-1.0.6/material.js"></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+    </div>
     <script src="http://localhost:8090/webpack-dev-server.js"></script>
     <script type="text/javascript" src="assets/js/bundle.js" charset="utf-8"></script>
 </body>
